# hashy

./: Cargo.toml
src/: cli.rs  main.rs  processor.rs  progress.rs
